--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minha primeira página</title>
-</head>
+ </head>
 <body>
-    <h1>um pouco sobre mim</h1>
+    <header><h1 id="tituloPrincipal"> Um pouco sobre mim </h1>
+        <h1>Vitoria Nogueira</h1>
+<p>Sou uma pessoa legal <b>divertida</b>gosto de ouvir musica <br>tenho interesse de fazer curso de enfermagem
+    </p>
+    </header>
+<hr width="50%">
+    <img id="imagem" src="depositphotos_450859562-stock-photo-brazilian-frozen-plastic-cup-condensed.jpg" alt="nome da imagem">
+    
 </body>
 </html>
