--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>minha primeira página</title>
+
+
+
  </head>
 <body>
     <header><h1 id="tituloPrincipal"> Um pouco sobre mim </h1>
