--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <section id="a">
         <div class="box"><ol type="I" start="3">
             <ol>
-            <li>gostos</li>
-            <li>gostos</li>
+            <li>gosto de ouvir musica</li>
+            <li>gosto de fazer caminhada</li>
             </ol>
         </div>
         <div class="box">
